Додає анімацію на галерею та benefits

--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -2,19 +2,19 @@
   <div class="container">
     <h2 class="visually-hidden">Benefits</h2>
     <ul class="benefits-list list">
-      <li class="benefits-item benefits-milk-svg">
+      <li class="benefits-item benefits-milk-svg" data-aos="slide-right">
         <h3 class="benefits-title">721</h3>
         <p class="benefits-text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="benefits-item benefits-food-svg">
+      <li class="benefits-item benefits-food-svg" data-aos="slide-up">
         <h3 class="benefits-title">16kg</h3>
         <p class="benefits-text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="benefits-item benefits-ice-cream-svg">
+      <li class="benefits-item benefits-ice-cream-svg" data-aos="slide-left">
         <h3 class="benefits-title">84</h3>
         <p class="benefits-text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
