--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -30,13 +30,12 @@
             media="(min-width: 768px)"
             srcset="./images/pictures/gallery/t/1-780@1x.png 780w,
                     ./images/pictures/gallery/t/1-780@2x.png 780w"
-
           >
           <source
             srcset="./images/pictures/gallery/t/1-780@1x.png 1x,
                     ./images/pictures/gallery/t/1-780@2x.png 2x"
           >
-          <img src="./images/pictures/gallery/t/1-780@1x.png" alt="Picture of a Ha Long Bay sunset">
+          <img src="./images/pictures/gallery/t/1-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
         </picture>
       </div>
       <div class="gallery-section-two gallery-item">
@@ -45,26 +44,24 @@
             media="(min-width: 768px)"
             srcset="./images/pictures/gallery/t/2-780@1x.png 780w,
                     ./images/pictures/gallery/t/2-780@2x.png 780w"
-
           >
           <source
             srcset="./images/pictures/gallery/t/2-780@1x.png 1x,
                     ./images/pictures/gallery/t/2-780@2x.png 2x"
           >
-          <img src="./images/pictures/gallery/t/2-780@1x.png" alt="Picture of a Ha Long Bay sunset">
+          <img src="./images/pictures/gallery/t/2-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
         </picture>
         <picture class="gallery-img">
           <source
             media="(min-width: 768px)"
             srcset="./images/pictures/gallery/t/3-780@1x.png 780w,
                     ./images/pictures/gallery/t/3-780@2x.png 780w"
-
           >
           <source
             srcset="./images/pictures/gallery/t/3-780@1x.png 1x,
                     ./images/pictures/gallery/t/3-780@2x.png 2x"
           >
-          <img src="./images/pictures/gallery/t/3-780@1x.png" alt="Picture of a Ha Long Bay sunset">
+          <img src="./images/pictures/gallery/t/3-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
         </picture>
       </div>
       <div class="gallery-section-three gallery-item">
@@ -73,26 +70,24 @@
             media="(min-width: 768px)"
             srcset="./images/pictures/gallery/t/4-780@1x.png 780w,
                     ./images/pictures/gallery/t/4-780@2x.png 780w"
-
           >
           <source
             srcset="./images/pictures/gallery/t/4-780@1x.png 1x,
                     ./images/pictures/gallery/t/4-780@2x.png 2x"
           >
-          <img src="./images/pictures/gallery/t/4-780@1x.png" alt="Picture of a Ha Long Bay sunset">
+          <img src="./images/pictures/gallery/t/4-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
         </picture>
         <picture class="gallery-img">
           <source
             media="(min-width: 768px)"
             srcset="./images/pictures/gallery/t/5-780@1x.png 780w,
                     ./images/pictures/gallery/t/5-780@2x.png 780w"
-
           >
           <source
             srcset="./images/pictures/gallery/t/5-780@1x.png 1x,
                     ./images/pictures/gallery/t/5-780@2x.png 2x"
           >
-          <img src="./images/pictures/gallery/t/5-780@1x.png" alt="Picture of a Ha Long Bay sunset">
+          <img src="./images/pictures/gallery/t/5-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
         </picture>
       </div>
       <div class="gallery-section-four gallery-item">
@@ -101,26 +96,24 @@
             media="(min-width: 768px)"
             srcset="./images/pictures/gallery/t/6-780@1x.png 780w,
                     ./images/pictures/gallery/t/6-780@2x.png 780w"
-
           >
           <source
             srcset="./images/pictures/gallery/t/6-780@1x.png 1x,
                     ./images/pictures/gallery/t/6-780@2x.png 2x"
           >
-          <img src="./images/pictures/gallery/t/6-780@1x.png" alt="Picture of a Ha Long Bay sunset">
+          <img src="./images/pictures/gallery/t/6-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
         </picture>
         <picture class="gallery-img">
           <source
             media="(min-width: 768px)"
             srcset="./images/pictures/gallery/t/7-780@1x.png 780w,
                     ./images/pictures/gallery/t/7-780@2x.png 780w"
-
           >
           <source
             srcset="./images/pictures/gallery/t/7-780@1x.png 1x,
                     ./images/pictures/gallery/t/7-780@2x.png 2x"
           >
-          <img src="./images/pictures/gallery/t/7-780@1x.png" alt="Picture of a Ha Long Bay sunset">
+          <img src="./images/pictures/gallery/t/7-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
         </picture>
       </div>
       <div class="gallery-section-five gallery-item">
@@ -129,26 +122,24 @@
             media="(min-width: 768px)"
             srcset="./images/pictures/gallery/t/8-780@1x.png 780w,
                     ./images/pictures/gallery/t/8-780@2x.png 780w"
-
           >
           <source
             srcset="./images/pictures/gallery/t/8-780@1x.png 1x,
                     ./images/pictures/gallery/t/8-780@2x.png 2x"
           >
-          <img src="./images/pictures/gallery/t/8-780@1x.png" alt="Picture of a Ha Long Bay sunset">
+          <img src="./images/pictures/gallery/t/8-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
         </picture>
         <picture class="gallery-img">
           <source
             media="(min-width: 768px)"
             srcset="./images/pictures/gallery/t/9-780@1x.png 780w,
                     ./images/pictures/gallery/t/9-780@2x.png 780w"
-
           >
           <source
             srcset="./images/pictures/gallery/t/9-780@1x.png 1x,
                     ./images/pictures/gallery/t/9-780@2x.png 2x"
           >
-          <img src="./images/pictures/gallery/t/9-780@1x.png" alt="Picture of a Ha Long Bay sunset">
+          <img src="./images/pictures/gallery/t/9-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
         </picture>
       </div>
       <div class="gallery-section-six gallery-item">
@@ -157,13 +148,12 @@
             media="(min-width: 768px)"
             srcset="./images/pictures/gallery/t/10-780@1x.png 780w,
                     ./images/pictures/gallery/t/10-780@2x.png 780w"
-
           >
           <source
             srcset="./images/pictures/gallery/t/10-780@1x.png 1x,
                     ./images/pictures/gallery/t/10-780@2x.png 2x"
           >
-          <img src="./images/pictures/gallery/t/10-780@1x.png" alt="Picture of a Ha Long Bay sunset">
+          <img src="./images/pictures/gallery/t/10-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
         </picture>
       </div>
     </div>
