--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -51,7 +51,10 @@
 // display: inline-block;
 // }
 
-// .gallery-section-four:focus,
-// .gallery-section-four:hover {
-//   transform: scale (2);
-// }
+.new-gallery-img {
+  transition: 1s;
+}
+.new-gallery-img:hover {
+  animation: swing 0.6s ease;
+  animation-iteration-count: 1;
+}
