перенаплавлення на відео при написканні кнопки

--- a/src/sass/layouts/_how-made.scss
+++ b/src/sass/layouts/_how-made.scss
@@ -149,6 +149,7 @@ picture {
 }
 
 .hm_btn {
+  text-decoration: none;
   @include for-size(mobile-only) {
     margin-left: auto;
     margin-right: auto;
