--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -31,7 +31,7 @@
     Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.<br><br>
     Aliquam erat volutpat. Aenean accumsan.</p>
     </div>
-    <button class="btn hm_btn " data-aos="slide-up">Read more 
+    <a class="btn hm_btn " href="https://www.youtube.com/watch?v=bKQAE5_16Y0" target="blank" rel="noreferrer noopener data-aos=" data-aos="slide-up">Read more 
           <svg
             class="arrow-svg"
             aria-label="Переход на мгновенную покупку"
@@ -41,7 +41,7 @@
               href="../src/images/icons/sprite.svg#tip">
             </use>
           </svg>
-</button>
+        </a>
 </ul>
 </div>
 </div>
