--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -62,7 +62,7 @@
             ./images/tablet/icecreame_hero.png    1x,
             ./images/tablet/icecreame_hero@x2.png 2x
           "
-          media="(min-width:481px)"
+          media="(min-width:320px)"
         />
 
         <source
@@ -77,7 +77,7 @@
       </picture>
     </div>
 
-    <!--Icecream girl-->
+    <!-- Icecream girl -->
     <div class="hero-girl-container animate__animated animate__bounceInUp">
       <picture class="hero-girl">
         <source
@@ -104,16 +104,17 @@
         <img src="./images/tablet/hero-girl.png" alt="Holding ice cream girl" />
       </picture>
     </div>
+
     <!--Numbers on the top right side-->
     <div class="hero-count">
       <ul>
-        <li class="hero-count-text animate__animated animate__zoomIn">
+        <li class="hero-count-text ">
           <div class="dot"></div>
           <span class="hero-number">16</span>
           <p class="hero-count-desc">cafes</p>
         </li>
 
-        <li class="hero-count-text animate__animated animate__zoomIn">
+        <li class="hero-count-text">
           <div class="dot"></div>
           <span class="hero-number">23</span>
 
