--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -37,7 +37,7 @@ main {
   @extend %btn;
   background: $main-color;
   color: #d41443;
-  // animation: animate110 3000ms infinite 2000ms;
+
   &:hover,
   &:focus {
     background: #ecebeb;
@@ -45,44 +45,18 @@ main {
   }
 }
 
-@keyframes animate110 {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-@keyframes animate90 {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(0.85);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-// scale 1.1
 .hero-red-button {
   @extend %btn;
   margin-right: 8px;
   color: $main-color;
   background: $accent-color;
-  // animation: animate90 3000ms infinite 2000ms;
 
   &:hover,
   &:focus {
     transform: scale(1.1);
     background: $advanced-bg;
     color: $accent-color;
-    /*     border: 1px solid $accent-color;
- */
+    border: 1px solid $accent-color;
   }
 }
 
@@ -90,7 +64,7 @@ main {
   background-color: $main-bg;
   height: 502px;
   position: relative;
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 768px) {
     background-image: url(../images/mobile/ellipse_hero.png);
     background-repeat: no-repeat;
     background-position: 100% 50%;
@@ -113,48 +87,12 @@ main {
   background-repeat: no-repeat;
   background-position: 90% 100%;
 
-  @media screen and (min-width: 480px) and (max-width: 767px) {
-    background-size: 171px 410px, 346px 344px;
-    background-image: url(../images/mobile/icecreame_hero.png),
-      url(../images/tablet/ellipse_hero.png);
-    background-repeat: no-repeat;
-    background-position: 90% 100%, 130% 45%;
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (-webkit-min-device-pixel-ratio: 2),
-    screen and (-o-min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    .hero-container {
-      background-image: url(../images/mobile/icecreame_hero@x2.png),
-        url(../images/mobile/ellipse_hero@x2.png);
-    }
-  }
-
-  @media screen and (min-width: 480px) {
-    @media screen and (min-device-pixel-ratio: 2),
-      screen and (-webkit-min-device-pixel-ratio: 2),
-      screen and (-o-min-device-pixel-ratio: 2/1),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-      .hero-container {
-        background-image: url(../images/tablet/hero-girl@x2.png),
-          url(../images/tablet/icecreame_hero@x2.png),
-          url(../images/tablet/ellipse_hero@x2.png),
-          url(../images/tablet/bidon-moloka@x2.png);
-      }
-    }
-  }
   @media screen and (min-width: 768px) {
     background-repeat: no-repeat;
 
-    background-image: /* url(../images/tablet/hero-girl.png), */
-      /*  url(../images/tablet/icecreame_hero.png),
-      url(../images/tablet/ellipse_hero.png), */ url(../images/tablet/bidon-moloka.png);
-    background-size: /* 168px 133px,  *//*  143px 336px, 324px 322px */
-      124px 126px;
-    background-position: /* 95% 100%,  *//*  61% 100%, 70% 40% */
-      5% 93%;
+    background-image: url(../images/tablet/bidon-moloka.png);
+    background-size: 124px 126px;
+    background-position: 5% 93%;
   }
 
   @media screen and (min-width: 768px) {
@@ -172,12 +110,10 @@ main {
   @media screen and (min-width: 1200px) {
     min-width: 1200px;
     margin: 0 auto;
-    background-size: /* 293px 232px, */ /*  236px 557px, 538px 538px, */ 188px
-      191px;
-    background-image: /* url(../images/hero-girl.png), */
-      /*  url(../images/icecreame_hero.png), url(../images/ellipse_hero.png), */ url(../images/bidon-moloka.png);
+    background-size: 188px 191px;
+    background-image: url(../images/bidon-moloka.png);
     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
-    background-position: /* 90% 100%, */ /* 60% 100%, 63% 34%,  */ 3% 92%;
+    background-position: 3% 92%;
   }
   @media screen and (min-width: 1200px) {
     @media screen and (min-device-pixel-ratio: 2),
@@ -186,8 +122,7 @@ main {
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
       .hero-container {
-        background-image: /* url(../images/hero-girl@x2.png), url(../images/icecreame_hero@x2.png),
-          url(../images/ellipse_hero@x2.png), */ url(../images/bidon-moloka@x2.png);
+        background-image: url(../images/bidon-moloka@x2.png);
       }
     }
   }
@@ -200,9 +135,6 @@ main {
   color: #ffffff;
   width: 218px;
 
-  // @media screen and (min-width: 480px) {
-  //   margin-bottom: 160px;
-  // }
   @media screen and (min-width: 768px) {
     padding-top: 102px;
     margin-bottom: 173px;
@@ -226,11 +158,7 @@ main {
   margin-bottom: 19px;
   color: $main-color;
   width: 200px;
-  @media screen and (min-width: 480px) {
-    font-weight: 400;
-    font-size: 26px;
-    line-height: 1.154;
-  }
+
   @media screen and (min-width: 768px) {
     width: 150px;
     font-size: 22px;
@@ -246,11 +174,7 @@ main {
     font-size: 48px;
     line-height: 0.89;
     color: #d41443;
-    @media screen and (min-width: 480px) {
-      font-weight: 400;
-      font-size: 48px;
-      line-height: 0.9375;
-    }
+
     @media screen and (min-width: 768px) {
       font-size: 34px;
       line-height: 0.8824;
@@ -305,8 +229,6 @@ main {
 
   border: 1px solid transparent;
 
-  /*   background-color: $main-color;
- */
   @media screen and (min-width: 1200px) {
     margin-top: 20px;
   }
