--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -41,6 +41,7 @@
   padding-bottom: 30px;
 }
 
+
 .gallery-img {
   display: block;
   width: 100%;
@@ -51,6 +52,5 @@
   transition: 1s;
 }
 .new-gallery-img:hover {
-  animation: swing 0.6s ease;
-  animation-iteration-count: 1;
+  transform: scale(1.2);
 }
