анимация на кнопки

--- a/src/sass/layouts/_section-locations.scss
+++ b/src/sass/layouts/_section-locations.scss
@@ -55,6 +55,8 @@
 
   border-radius: 22px;
 
+  transition-duration: 250ms;
+
   &:first-child {
     background-color: $accent-color;
     color: $white-color;
