--- a/src/partials/burger.html
+++ b/src/partials/burger.html
@@ -4,7 +4,7 @@
 
         <button type="button" class="btn-burger">
             <svg class="btn-icon" width="10" height="10">
-                <use xlink:href="./images/sprite.svg#icon-cheveron-right">
+                <use href="./images/sprite.svg#icon-cheveron-right">
                 </use>
             </svg>Buy now</button>
 
