--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -238,7 +238,7 @@
 }
 
 .shops-btn {
-  display: block;
+  display: inline-block;
   margin-right: auto;
   margin-left: auto;
   padding-top: 10px;
