кнопка на месте
+ссылки :hover + :focus

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -52,6 +52,12 @@
 }
 
 .menu-button {
+  position: absolute;
+  z-index: 223;
+
+  top: 13px;
+  right: 24px;
+
   display: inline-block;
   margin: 0;
   padding: 0;
@@ -62,6 +68,10 @@
   @media screen and (min-width: 1200px) {
     display: none;
   }
+}
+
+.menu-button.is-open {
+  position: static;
 }
 
 .menu-button .menu-icon {
@@ -121,12 +131,16 @@
   background-color: rgba(255, 184, 202, 1);
 }
 
+.menu-button > .close-icon {
+  background-color: #e17992;
+}
+
 .icon-open {
   fill: #d41443;
 }
 
 .icon-close {
-  fill: #d41443;
+  fill: #fff;
 }
 
 .header-button-modal {
