--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -1,15 +1,20 @@
 .shops-container {
-  left: 50%;
-  top: -84px;
-  transform: translate(-50%, 0);
-  position: absolute;
-  background-color: $footer-bg;
+  // left: 50%;
+  // top: -84px;
+  // transform: translate(-50%, 0);
+  // position: absolute;
+
   
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   
-  @media screen and (min-width: 320px) {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    left: 50%;
+    top: -84px;
+    transform: translate(-50%, 0);
+    position: absolute;
+
     width: 320px;
     padding-left: 20px;
     padding-right: 20px;
@@ -20,6 +25,11 @@
   // }
 
   @media screen and (min-width: 768px) {
+    position: absolute;
+    top: -78px;
+    left: 50%;
+    transform: translate(-50%, 0);
+
     width: 768px;
     padding-left: 34px;
     padding-right: 34px;
@@ -34,8 +44,18 @@
 }
 
 .shops-bgc {
-
+  background-color: $footer-bg;
   position: relative;
+
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    height: 1511px;
+    margin-top: 170px;
+  }
+  
+  @media screen and (min-width: 768px) {
+    height: 665px;
+    margin-top: 197px;
+  }
 }
 
 .shops-hide {
@@ -67,15 +87,22 @@
 
   @media screen and (min-width: 1200px) {
     width: 330px;
+    padding-left: 31px;
+    padding-right: 31px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     &:nth-child(-n + 3) {
       margin-right: 30px;
     }
   } 
 }
 
-.shops-section:not(:last-child) {
-  margin-bottom: 20px;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .shops-section:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
+
 
 
 .shops-title {
@@ -90,6 +117,15 @@
   width: 80px;
   height: 16px;
   margin-bottom: 25px;
+
+  @media screen and (min-width: 1200px) {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.86;
+    text-align: center;
+    margin-bottom: 30px;
+    color: #FFFFFF;
+  }
 }
 
 .shops-title-foodtruck {
@@ -104,6 +140,15 @@
   width: 130px;
   height: 16px;
   margin-bottom: 25px;
+
+  @media screen and (min-width: 1200px) {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.86;
+    text-align: center;
+    margin-bottom: 30px;
+    color: #FFFFFF;
+  }
 }
 
 .shops-city {
@@ -112,6 +157,18 @@
   line-height: 1.86;
   color: #000000;
   margin-bottom: 10px;
+
+  @media screen and (min-width: 768px) {
+    font-weight: 500;
+  font-size: 14px;
+  line-height: 1.86;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-weight: 500;
+  font-size: 16px;
+  line-height: 1.86;
+  }  
 }
 
 .shops-text {
@@ -120,6 +177,17 @@
   line-height: 1.5;
   color: #907E82;
   padding-bottom: 25px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.66;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 1.83;
+    padding-bottom: 32px;
+  }
 }
 
 .shops-working-days {
@@ -127,6 +195,16 @@
   font-size: 12px;
   line-height: 1.86;
   color: #000000;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  line-height: 1.86;
+  } 
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+  line-height: 1.86;
+  }  
 }
 
 .shops-working-hours {
@@ -135,6 +213,16 @@
   line-height: 1.86;
   color: #FFA5BA;
   margin-bottom: 10px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  line-height: 1.86;
+  } 
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+  line-height: 1.86;
+  }
 }
 
 .shops-schedule-1 {
@@ -143,6 +231,11 @@
   border-top-width: 1px;
   border-top-style: solid;
   border-top-color: #E1E1E1;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  } 
 }
 
 .shops-contacts {
@@ -150,6 +243,16 @@
   font-size: 12px;
   line-height: 1.5;
   color: #907E82;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  line-height: 1.86;
+  } 
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+  line-height: 1.86;
+  }
 }
 
 .shops-contacts-container li {
@@ -161,6 +264,10 @@
   border-top-style: solid;
   border-top-color: #E1E1E1;
   padding-top: 25px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 32px;
+  }
 }
 
 .shops-button {
@@ -228,9 +335,21 @@
   background-repeat: no-repeat;
 }
 
+.shops-buttons {
+  margin-top: 54px;
+}
+
 @media screen and (min-width: 768px) {
   .shops-buttons {
     display: flex;
-  
+  }
+
+  .shops-thumb {
+    width: 768px;
+    width: 549px;
+    position: relative;
+
   }
 }
+
+
