--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -20,7 +20,7 @@
     <!--Title text-->
     <div class="hero-text-description">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-      <button class="hero-arrow ">
+      <button class="hero-arrow " aria-label="hero-arrow">
         <!--arrow-->
         <svg width="10" height="10" class="hero-arrow-svg">
 
