--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -34,7 +34,7 @@
                     <p class="products-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                         ut labore et. dolore magna
                         aliqua facilisis.</p>
-                    <button class="products-button">
+                    <button class="products-button" aria-label="products-button">
                         <svg class="circle-button" width="11" height="10">
                             <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
                         </svg>
@@ -65,7 +65,7 @@
                 <p class="products-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et. dolore magna
                     aliqua facilisis.</p>
-                <button class="products-button">
+                <button class="products-button" aria-label="products-button">
                     <svg class="circle-button" width="11" height="10">
                         <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
                     </svg>
@@ -96,7 +96,7 @@
                 <p class="products-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et. dolore magna
                     aliqua facilisis.</p>
-                <button class="products-button">
+                <button class="products-button" aria-label="products-button">
                     <svg class="circle-button" width="11" height="10">
                         <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
                     </svg>
