add main.scss to index.html

--- a/src/sass/made/_made.scss
+++ b/src/sass/made/_made.scss
@@ -81,7 +81,7 @@
     background-color: getColor('textLight');
     border: none;
     margin-left: 30px;
-    transition: background-color 250ms $timing-function; 
+    transition: background-color 250ms $cubic; 
 
     @include for-size(tablet) {
       margin-left: 0;
