--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -32,16 +32,14 @@
     padding-bottom: 28px;
     height: 400px;
 
-    background-image: url(../images/pictures/hero/tablet/hero_milk_1x_t.png),
-      url(../images/pictures/hero/tablet/hero_ice_1x_t.png),
+    background-image: url(../images/pictures/hero/tablet/hero_ice_1x_t.png),
       url(../images/pictures/hero/tablet/hero_ellipse_1x_t.png);
 
-    background-size: 124px auto, 143px auto, 324px auto;
-    background-position: 15px 245px, 60% 100%, 70% 31px;
+    background-size: 143px auto, 324px auto;
+    background-position: 60% 100%, 70% 31px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url(../images/pictures/hero/tablet/hero_milk_2x_t.png),
-        url(../images/pictures/hero/tablet/hero_ice_2x_t.png),
+      background-image: url(../images/pictures/hero/tablet/hero_ice_2x_t.png),
         url(../images/pictures/hero/tablet/hero_ellipse_2x_t.png);
     }
   }
@@ -51,18 +49,46 @@
     padding-bottom: 45px;
     height: 665px;
 
-    background-image: url(../images/pictures/hero/desktop/hero_milk_1x_d.png),
-      url(../images/pictures/hero/desktop/hero_ice_1x_d.png),
+    background-image: url(../images/pictures/hero/desktop/hero_ice_1x_d.png),
       url(../images/pictures/hero/desktop/hero_ellipse_1x_d.png);
 
-    background-size: 188px auto, 236px auto, 538px auto;
-    background-position: left 419px, 60% 100%, 68% 52px;
+    background-size: 236px auto, 538px auto;
+    background-position: 60% 100%, 68% 52px;
 
     @media (min-resolution: 2dppx) {
       background-image: url(../images/pictures/hero/desktop/hero_milk_2x_d.png),
         url(../images/pictures/hero/desktop/hero_ice_2x_d.png),
         url(../images/pictures/hero/desktop/hero_ellipse_2x_d.png);
     }
+  }
+}
+
+.hero-milk {
+  position: absolute;
+  left: 15px;
+  bottom: 0;
+  width: 124px;
+  height: 126px;
+
+  &:hover {
+    animation: swing 0.6s ease;
+    animation-iteration-count: 1;
+  }
+
+  @include for-size(tablet) {
+    background-image: url(../images/pictures/hero/tablet/hero_milk_1x_t.png);
+    background-size: contain;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url(../images/pictures/hero/tablet/hero_milk_2x_t.png);
+    }
+  }
+
+  @include for-size(desktop) {
+    background-image: url(../images/pictures/hero/desktop/hero_milk_1x_d.png);
+    width: 188px;
+    height: 191px;
+    left: 0px;
   }
 }
 
@@ -78,11 +104,6 @@
     animation-iteration-count: 1;
   }
 
-  @include for-size(desktop) {
-    width: 293px;
-    height: 232px;
-    right: 32px;
-  }
   @include for-size(tablet) {
     background-image: url(../images/pictures/hero/tablet/hero_girl_1x_t.png);
     background-size: contain;
@@ -94,6 +115,9 @@
 
   @include for-size(desktop) {
     background-image: url(../images/pictures/hero/desktop/hero_girl_1x_d.png);
+    width: 293px;
+    height: 232px;
+    right: 32px;
 
     @media (min-resolution: 2dppx) {
       background-image: url(../images/pictures/hero/desktop/hero_girl_2x_d.png);
