--- a/src/sass/layouts/_burger.scss
+++ b/src/sass/layouts/_burger.scss
@@ -4,7 +4,7 @@
   border: none;
   background-color: transparent;
   fill: $main-text-color;
-  z-index: 55;
+  // z-index: 55;
 
   @include for-size(tablet) {
     // margin-right: 20px;
@@ -17,6 +17,18 @@
   }
 }
 
+.menu-button.is-open {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+
+  @include for-size(tablet) {
+    // margin-right: 20px;
+    position: absolute;
+    top: 30px;
+    right: 40px;
+  }
+}
 .menu-button .icon-menu-close {
   display: none;
 }
@@ -32,7 +44,7 @@
 .mobile-container {
   position: absolute;
   right: 0;
-  // top: 0;
+  top: 0;
   width: 250px;
   height: 500px;
   z-index: 50;
@@ -59,7 +71,7 @@
 }
 .mobile-content {
   position: absolute;
-  // top: 0;
+  top: 0;
   right: 0;
   width: 250px;
   height: 500px;
