Перепрописала медиа запросы

--- a/src/sass/made/_made.scss
+++ b/src/sass/made/_made.scss
@@ -3,12 +3,12 @@
     padding-top: 125px;
     padding-bottom: 39px;
 
-    @include for-size(tablet) {
+    @media screen and (min-width: 768px) {
       padding-top: 130px;
       padding-bottom: 66px;
     }
 
-    @include for-size(desktop) {
+    @media screen and (min-width: 1200px) {
       padding-top: 125px;
       padding-bottom: 172px;
       background-image: url(../images/how-its-made/milk-bg.png);
@@ -27,7 +27,7 @@
 }
 
 .container {
-  @include for-size(tablet) {
+  @media screen and (min-width: 768px) {
     width: auto;
   }
 
@@ -41,11 +41,11 @@
     color: getColor('titleLight');
     margin-bottom: 15px;
 
-    @include for-size(tablet) {
+    @media screen and (min-width: 768px) {
       @include fonts(400, 26px, 1.13, 0.04em);
     }
 
-    @include for-size(desktop) {
+    @media screen and (min-width: 1200px) {
       @include fonts(400, 30px, 1.17, 0.03em);
     }
   }
@@ -58,12 +58,12 @@
     color: getColor('accent');
     margin-bottom: 26px;
 
-    @include for-size(tablet) {
+    @media screen and (min-width: 768px) {
       @include fonts(400, 48px, 1.14, 0.03em);
       margin-bottom: 50px;
     }
 
-    @include for-size(desktop) {
+    @media screen and (min-width: 1200px) {
       @include fonts(400, 58px, 1.15, 0.06em);
       margin-bottom: 102px;
     }
@@ -83,7 +83,7 @@
     margin-left: 30px;
     transition: background-color 250ms $cubic; 
 
-    @include for-size(tablet) {
+    @media screen and (min-width: 768px) {
       margin-left: 0;
       @include fonts(700, 16px, 1.29, 0.03em);
     }
@@ -106,12 +106,12 @@
     align-items: center;
     padding: 46px 30px 0 30px;
 
-    @include for-size(tablet) {
+    @media screen and (min-width: 768px) {
       position: unset;
       padding: 46px 15px 0 16px;
     }
 
-    @include for-size(desktop) {
+    @media screen and (min-width: 1200px) {
       position: unset;
       padding: 46px 80px 0 70px;
     }
@@ -123,7 +123,7 @@
     right: -20px;
     left: -20px;
 
-    @media (min-width: 466px) {
+    @media screen and (min-width: 466px) {
       display: none;
     }
   }
@@ -141,11 +141,12 @@
   margin-top: 0;
   margin-bottom: 36px;
 
-  @include for-size(tablet) {
+  @media screen and (min-width: 768px) {
     @include fonts(500, 13px, 1.8, 0.02em);
     margin-bottom: 33px;
   }
-  @include for-size(desktop) {
+
+  @media screen and (min-width: 1200px){
     @include fonts(500, 15px, 1.58, 0.03em);
     margin-bottom: 35px;
   }
@@ -158,22 +159,23 @@
   color: getColor('secondaryText');
   margin-bottom: 20px;
 
-  @include for-size(tablet) {
+  @media screen and (min-width: 768px) {
     @include fonts(500, 14px, 1.58, 0.05em);
   }
-  @include for-size(desktop) {
+
+  @media screen and (min-width: 1200px) {
     @include fonts(500, 14px, 1.9, 0.04em);
     margin-bottom: 45px;
   }  
 }
 
 .flex-container {
-  @include for-size(tablet) {
+  @media screen and (min-width: 768px) {
     display: flex;
     margin-left: 20px;
   }
 
-  @include for-size(desktop) {
+  @media screen and (min-width: 1200px) {
     margin-left: 92px;
   }
   
