--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -293,6 +293,12 @@
   font-size: 16px;
   line-height: 1.3;
   color: #D41443;
+
+  &:hover,
+  &:focus {
+    background: #ecebeb;
+    border: 1px solid #d41443;
+  }
 }
 
 .shops-button-2::after {
@@ -310,6 +316,17 @@
   font-size: 16px;
   line-height: 1.3;
   color: #FFFFFF;
+
+  &:hover,
+  &:focus {
+    background: #ffa5ba;
+    color: #d41443;
+    border: 1px solid #d41443;
+
+    &::after {
+      background-image: url(../images/svg/icon-button_arrow.svg);
+    }
+  }
   
   @media screen and (min-width: 320px) and (max-width: 767px) {
     margin-bottom: 10px;
