added something to somewhere :+1:

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,15 @@
 <header class="page-header">
   <div class="page-header__container">
-    <a class="page-header__logo" href="">
-      <img src="./images/logo/logo.png" alt="" />
+    <a class="page-header__logo link" href="./">
+      <span>
+        <img
+          alt="logo"
+          src="./images/hero/logo-s/logo.png"
+          width="50"
+          height="50"
+        />
+      </span>
+      <span class="page-header__logo-title">icecream</span>
     </a>
     <nav class="page-header__nav">
       <ul class="list">
