Добавил секцию слайдер

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,5 +10,6 @@
 @import './layouts/products';
 @import './layouts/recipe';
 @import './layouts/components';
+@import './layouts/slider';
 @import './layouts/locations';
 @import './layouts/footer';
